# peleka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile
.config/: nextest.toml
.github/workflows/: ci.yml
src/: cli.rs  diagnostics.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: deploy.rs  exec.rs  mod.rs  rollback.rs  runtime_connection.rs
src/config/: deserialize.rs  env_value.rs  healthcheck.rs  init.rs  mod.rs  restart_policy.rs  server.rs  stop.rs
src/deploy/: deployment.rs  error.rs  lock.rs  mod.rs  orphans.rs  rollback.rs  state.rs  strategy.rs  transitions.rs
src/hooks/: mod.rs
src/runtime/: bollard.rs  detection.rs  error.rs  mod.rs  types.rs
src/runtime/docker/: mod.rs  runtime.rs
src/runtime/podman/: mod.rs  runtime.rs
src/runtime/traits/: container.rs  exec.rs  image.rs  logs.rs  mod.rs  network.rs  runtime_info.rs  sealed.rs  shared_types.rs
src/ssh/: client.rs  error.rs  forward.rs  mod.rs
src/types/: id.rs  image_ref.rs  mod.rs  network_alias.rs  service_name.rs
tests/: cli.rs  config.rs  deploy_lock.rs  deployment_state.rs  deployment_transitions.rs  docker_runtime.rs  forwarding.rs  health_check.rs  hooks.rs  podman_runtime.rs  rollback.rs  runtime.rs  runtime_local.rs  ssh.rs  traits.rs  types.rs  types_compile_tests.rs  zero_downtime.rs
tests/compile_fail/: id_not_interchangeable.rs  id_not_interchangeable.stderr  invalid_transition_cutover_on_initialized.rs  invalid_transition_cutover_on_initialized.stderr  invalid_transition_rollback_on_completed.rs  invalid_transition_rollback_on_completed.stderr
tests/fixtures/: test_key  test_key.pub
tests/fixtures/dind-ssh/: Dockerfile  entrypoint.sh
tests/fixtures/docker-ssh/: Dockerfile  entrypoint.sh
tests/fixtures/podman-ssh/: Dockerfile  entrypoint.sh
tests/fixtures/ssh-only/: Dockerfile  entrypoint.sh
tests/support/: dind_container.rs  docker_container.rs  mod.rs  podman_container.rs  ssh_container.rs
