[package]
name = "peleka"
version = "0.1.0"
edition = "2024"
description = "Zero-downtime container deployment tool for Docker and Podman"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
humantime-serde = "1"
russh = { version = "0.56", features = ["aws-lc-rs"] }
russh-keys = "0.49"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
trybuild = "1"
