[package]
name = "peleka"
version = "0.1.2"
edition = "2024"
description = "Container deployment tool for Docker and Podman"
license = "MIT"
repository = "https://github.com/vitalratel/peleka"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
snafu = "0.8"
chrono = { version = "0.4", features = ["serde"] }
gethostname = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
humantime-serde = "1"
nonempty = { version = "0.12", features = ["serialize"] }
russh = { version = "0.57.0", features = ["aws-lc-rs"] }
futures = "0.3"
parking_lot = "0.12"
bollard = { version = "0.20.0", features = ["time"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
urlencoding = "2.1.3"
hyper = { version = "1.8.1", features = ["http1", "client"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
temp-env = "0.3"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
trybuild = "1"
serde_json = "1"
ctor = "0.6"
tar = "0.4"
http-body-util = "0.1"
bytes = "1"
test-group = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
